Biz details are no longer fake, fixed some modularity and security issues,

--- a/BIZspot-backend/server/config.json
+++ b/BIZspot-backend/server/config.json
@@ -11,7 +11,7 @@
     },
     "json": {
       "strict": false,
-      "limit": "100kb"
+      "limit": "1mb"
     },
     "urlencoded": {
       "extended": true,
